<resources>
    <string name="app_name">SSC</string>
    <string name="select">Items</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="new_to_sycap">New to Sycap?</string>
    <string name="remember_me">Remember me</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">name: </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>