<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C1FDAB"
        >




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                tools:ignore="UselessParent">
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:lottie_rawRes="@raw/garbage"
                    android:layout_gravity="center"
                    app:lottie_autoPlay="true"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sycap Scrap Collector"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    />



                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="30dp"


                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sign_in"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/forget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:text="@string/forgot_password"
                        android:textSize="15sp"
                        android:layout_marginStart="15dp" />

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:hintTextColor="@color/black"
                        app:startIconTint="@color/black"
                        app:endIconMode="clear_text"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@color/black"
                        app:endIconTint="@color/black"
                        app:startIconDrawable="@drawable/ic_baseline_person_outline_24"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/el1"
                            android:textSize="16sp"
                            android:hint="@string/email"
                            android:paddingStart="10dp"
                            android:padding="20dp"
                            android:drawablePadding="10dp"
                            tools:ignore="RtlSymmetry" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextColor="@color/black"
                        app:startIconTint="@color/black"
                        app:counterTextColor="@color/black"
                        app:boxStrokeColor="@color/black"
                        app:boxBackgroundColor="@color/white"
                        android:layout_marginTop="20dp"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/black"
                        app:startIconDrawable="@drawable/ic_baseline_security_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/el2"
                            android:hint="@string/password"
                            android:padding="20dp"
                            android:drawablePadding="10dp"
                            android:inputType="textPassword"


                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/remember_me"
                        android:textSize="16sp"
                        android:textColor="@color/black" />


                </LinearLayout>

                <Button
                    android:id="@+id/btn15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:backgroundTint="#2CFD15"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"

                    />

                <LinearLayout

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="120dp"


                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_to_sycap"
                        android:textSize="16sp"
                        android:textColor="@color/black"


                        />

                    <TextView
                        android:id="@+id/logintosignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/white"


                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/iconimg3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/github"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/todo" />

                    <ImageView
                        android:id="@+id/iconimg4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/google"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/todo" />


                </LinearLayout>
            </LinearLayout>



    </ScrollView>
</layout>